2024/08/01 Twain Source do not use index to Select Device (Twain change order in some cases); 
           32bit server Open using TW_IDENTITY;
           GetTwainSource function in 32bit server/Twain Source test current Selected Device is correct;
           DeviceInfoDifferent function to test Devices Names;
           TTwainSelectSource Execute return AScannerInfo: TTwainDeviceInfo 
 
2024/07/29 Use ResourceString and changed names in Sources; 
	   Use home\pictures as default Save Pictures Path; 
	   Deleted SourceOptions Button;  
	   Default Item in Sources/Destinations;
	   Captured Rotate and Refresh a single item

2024/07/25 Moved theBridge.Free in MainForm so the Twain 32bit process will close on exit;
           XML_SaveWork called on exit;
           XML Work Load/Save Destination from the Interfaces List;
           TwainSource and 32bit Comm Server use new syncipc constants and async message on exit; 
           Destination menu item filled from Interfaces List;
           Sources/Destination menuitem use Default to indicate the selected one (lcl bug? remove others item)

2024/07/17 Changed identifiers and units names from "Taker" to "Source";
           Avoid OpenArray runerror(204) on destroy using FillChar(0) in FreeElement
           First write of Destinations interfaces
           Moved interfaces common code to a new ancestor interface IDigIt_Interface
           IDigIt_Source/Destination derived from IDigIt_Interface
           Bridge implemetations of List use the new generic TOpenArrayList in MaxM_Commons package

16/07/2024 Takers List implementation moved Find method as public;
           Taker/Destination MenuItems Checkbox
15/07/2024 Twain use Scanner Default Values when is a new Selection
11/07/2024 Only one method Take in IDigIt_Taker with DigIt_Taker_TakeAction param;
           Changed some constant name; More comments
10/07/2024 Destination as ToolButton with a Settings Form;
	   Changed XML Structure;